[metadata]
name = pylabel
version = 0.0.1
author = Emily Cyford
author_email = ebcyford@gmail.com
description = Making data labeling easier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ebcyford/pylabel
project_urls =
    Bug Tracker = https://github.com/ebcyford/pylabel/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pylabel
packages = find:
python_requires = >=3.8

[options.packages.find]
where = pylabel